# api

./: .env-example  .gitignore  .pre-commit-config.yaml  pyproject.toml
nss_api/: app.py  server.py
nss_api/decorators/: require_login.py
nss_api/endpoints/: __init__.py
nss_api/endpoints/auth/: callback.py  external.py
nss_api/endpoints/events/: history.py  manage.py  register.py  volunteers.py
nss_api/endpoints/me/: about.py  hour_log.py
nss_api/endpoints/team/: info.py
nss_api/endpoints/users/: me.py
nss_api/models/db/: event.py  student.py  volunteer_hours_log.py
nss_api/models/internal/: jwt_status.py
nss_api/utils/: decorators.py  jwt.py
