[tool.poetry]
name = "nss-api"
version = "0.1.0"
description = "API backend for the app of NSS MITBLR Unit"
authors = ["Alphaspiderman <68412330+Alphaspiderman@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
taskipy = "^1.12.2"
sanic = {extras = ["ext"], version = "^23.12.1"}
motor = "^3.3.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
aiohttp = "^3.9.5"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
pre-commit = "^3.4.0"
python-dotenv = "^1.0.0"

[tool.taskipy.tasks]
lint = { cmd = "pre-commit run", help = "Lints project" }
lintall = { cmd = "pre-commit run --all-files", help = "Lints project" }
precommit = { cmd = "pre-commit install", help = "Installs the pre-commit git hook" }
format = { cmd = "black nss_api", help = "Runs the black python formatter" }
server = { cmd = "python -m nss_api.server", help = "Runs the API Server"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
